--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,87 +3,147 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport"
-		content="width=device-width,initial-scale=1,maximum-scale=1">
-	<title>koalaMania</title>
-	
-	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-	<link rel="canonical"
-		href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
-	
-	<!-- Bootstrap core CSS -->
-	<link
-		href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
-		rel="stylesheet"
-		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-		crossorigin="anonymous">
-	
-	<!-- Favicons -->
-	<link rel="apple-touch-icon"
-		href="/docs/5.0/assets/img/favicons/apple-touch-icon.png"
-		sizes="180x180">
-	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png"
-		sizes="32x32" type="image/png">
-	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png"
-		sizes="16x16" type="image/png">
-	<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
-	<link rel="mask-icon"
-		href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg"
-		color="#7952b3">
-	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
-	<meta name="theme-color" content="#7952b3">
-	
-	<link href="/css/background.css" rel="stylesheet">
-	<link href="/css/starter-template.css" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap"
-		rel="stylesheet">
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width,initial-scale=1,maximum-scale=1">
+<title>koalaMania</title>
 
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<link rel="canonical"
+	href="https://getbootstrap.jp/docs/5.0/examples/starter-template/">
+
+<!-- Bootstrap core CSS -->
+<link
+	href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+
+<!-- Favicons -->
+<link rel="apple-touch-icon"
+	href="/docs/5.0/assets/img/favicons/apple-touch-icon.png"
+	sizes="180x180">
+<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png"
+	sizes="32x32" type="image/png">
+<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png"
+	sizes="16x16" type="image/png">
+<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
+<link rel="mask-icon"
+	href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg"
+	color="#7952b3">
+<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
+<meta name="theme-color" content="#7952b3">
+
+<link href="/css/background.css" rel="stylesheet">
+<link href="/css/starter-template.css" rel="stylesheet">
+<link href="/css/index.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link
+	href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@900&display=swap"
+	rel="stylesheet">
+
+<script type="text/javascript">
+	
+</script>
+<link href="/css/searchResult.css" rel="stylesheet">
 </head>
 
 <body>
-<div th:replace="~{block/header_boot::headerA_boot}"></div>
+	<div th:replace="~{block/header_boot::headerA_boot}"></div>
+	<!-- Modal 動物園-->
+	<div class="modal fade" id="exampleModal" tabindex="-1"
+		aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">動物園で絞り込み</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+						aria-label="Close"></button>
+				</div>
+				<form class="searchform" method="get" th:action="@{/search}">
+					<div class="modal-body">
+
+						<div th:each="zoo : ${zooList}">
+							<input type="checkbox" th:value="${zoo.zoo_name}"
+								th:text="${zoo.zoo_name}" name="keyword">
+						</div>
+
+					</div>
+					<div class="modal-footer">
+						<button type="submit" class="btn btn-primary">さがす</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal 動物 今後コアラ以外の動物に拡張した際に対応が必要-->
+	<div class="modal fade" id="animalModal" tabindex="-1"
+		aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="animalModalLabel">動物で絞り込み</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+						aria-label="Close"></button>
+				</div>
+				<form class="searchform" method="get" th:action="@{/search}">
+					<div class="modal-body">
+							<input type="checkbox" th:text="コアラ">
+					</div>
+					<div class="modal-footer">
+						<button type="submit" class="btn btn-primary">さがす</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+
 	<!-- Masthead-->
 	<div class="masthead">
 		<!-- <div class="search">
 			<a th:href="@{/search}"></a>
 		</div>-->
-			<div class="masthead_content">
-				<div class="logo">
-					<img src="images/title.png" alt="title">
+		<div class="masthead_content">
+			<div class="logo">
+				<img src="images/title.png" alt="title">
+			</div>
+			<div class="copy">
+				<p>コアラのことがもっと好きになるデータベース</p>
+			</div>
+			<form class="searchform" method="get" th:action="@{/search}"
+				th:object="${animalSearchForm}">
+				<div class="topsearch">
+					<div class="container g-0">
+						<div class="row g-0 topsearch_tabs">
+							<div class="col-4 topsearch_tab">
+								<a class="tab_active">キーワードから探す</a>
+							</div>
+							<div class="col-4 topsearch_tab js-modal-open-zoo">
+								<a class="" data-bs-toggle="modal"
+									data-bs-target="#exampleModal">動物園から探す</a>
+							</div>
+							<div class="col-4 topsearch_tab js-modal-open-animal">
+								<a class="" data-bs-toggle="modal"
+									data-bs-target="#animalModal">動物から探す</a>
+							</div>
+						</div>
+					</div>
+					<div class="topsearch_keyword">
+						<div class="formtext">
+							<input class="formtext" type="text" name="keyword" value=""
+								placeholder="コアラ・動物園名">
+							<button class="topsearch_button" type="submit">さがす</button>
+						</div>
+					</div>
 				</div>
-				<div class="copy">
-					<p>コアラのことがもっと好きになるデータベース</p>
-				</div>
-			<form class="searchform" method="get" th:action="@{/search}" th:object="${animalSearchForm}">
-            <div class="topsearch">
-            <div class="container g-0">
-            <div class="row g-0 topsearch_tabs">
-            <div class="col-4 topsearch_tab">
-            <a class="tab_active">キーワードから探す</a>
-            </div>
-            <div class="col-4 topsearch_tab">
-            <a class="">キーワードから探す</a>
-            </div>
-            <div class="col-4 topsearch_tab">
-            <a class="">キーワードから探す</a>
-            </div>
-            </div>
-            </div>
-              <div class="topsearch_keyword">
-                <div class="formtext">
-                  <input class="formtext" type="text" name="keyword" value="" placeholder="コアラ・動物園名">
-                  <button class="topsearch_button" type="submit">さがす</button>
-                </div>
-              </div>
-            </div>
-          </form>
+			</form>
 		</div>
-		</div>
-</container>
+	</div>
+	</container>
+
 	<!-- Services-->
 	<section class="page-section" id="services">
 		<div class="container">
